force-app/main/default/objects/ArchivedAccount__x/ArchivedAccount__x.object-meta.xml
<CustomObject>
    <description>Account</description>
    <externalDataSource>Privacy_Center_Retention_Store</externalDataSource>
    <externalName>account</externalName>
    <label>Archived Account</label>
    <pluralLabel>Archived Accounts</pluralLabel>
</CustomObject>