force-app/main/default/objects/ArchivedAccount__x/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <externalDeveloperName>c_00_n2w00000bwj_yy</externalDeveloperName>
    <label>ABN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>