force-app/main/default/objects/ArchivedAccount__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <externalDeveloperName>c_00_n2w00000_qx_y_p_o</externalDeveloperName>
    <label>Account</label>
    <length>255</length>
    <referenceTargetField>Account.ID__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Archived Accounts</relationshipLabel>
    <relationshipName>Archived_Accounts</relationshipName>
    <type>IndirectLookup</type>
</CustomField>