force-app/main/default/objects/ArchivedAccount__x/fields/Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Account_Description__c</fullName>
    <externalDeveloperName>description</externalDeveloperName>
    <label>Account Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>