force-app/main/default/objects/ArchivedAccount__x/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <externalDeveloperName>name</externalDeveloperName>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>