force-app/main/default/objects/ArchivedAccount__x/fields/Account_Rating__c.field-meta.xml
<CustomField>
    <fullName>Account_Rating__c</fullName>
    <externalDeveloperName>rating</externalDeveloperName>
    <label>Account Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>