force-app/main/default/objects/ArchivedAccount__x/fields/Account_Site__c.field-meta.xml
<CustomField>
    <fullName>Account_Site__c</fullName>
    <externalDeveloperName>site</externalDeveloperName>
    <label>Account Site</label>
    <length>80</length>
    <type>Text</type>
</CustomField>