force-app/main/default/objects/ArchivedAccount__x/fields/Account_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Source__c</fullName>
    <externalDeveloperName>accountsource</externalDeveloperName>
    <label>Account Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>