force-app/main/default/objects/ArchivedAccount__x/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <externalDeveloperName>type</externalDeveloperName>
    <label>Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>