force-app/main/default/objects/ArchivedAccount__x/fields/Accounting_Hold__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>c_00_n2w00000_qx_y_rn</externalDeveloperName>
    <label>Accounting Hold</label>
    <type>Checkbox</type>
</CustomField>