force-app/main/default/objects/ArchivedAccount__x/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <externalDeveloperName>annualrevenue</externalDeveloperName>
    <label>Annual Revenue</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>