force-app/main/default/objects/ArchivedAccount__x/fields/Asst_Phone__c.field-meta.xml
<CustomField>
    <fullName>Asst_Phone__c</fullName>
    <externalDeveloperName>personassistantphone</externalDeveloperName>
    <label>Asst. Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>