force-app/main/default/objects/ArchivedAccount__x/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <externalDeveloperName>billingcountry</externalDeveloperName>
    <label>Billing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>