force-app/main/default/objects/ArchivedAccount__x/fields/Billing_Geocode_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Billing_Geocode_Accuracy__c</fullName>
    <externalDeveloperName>billinggeocodeaccuracy</externalDeveloperName>
    <label>Billing Geocode Accuracy</label>
    <length>40</length>
    <type>Text</type>
</CustomField>