force-app/main/default/objects/ArchivedAccount__x/fields/Billing_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Billing_Latitude__c</fullName>
    <externalDeveloperName>billinglatitude</externalDeveloperName>
    <label>Billing Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>