force-app/main/default/objects/ArchivedAccount__x/fields/Billing_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Billing_Longitude__c</fullName>
    <externalDeveloperName>billinglongitude</externalDeveloperName>
    <label>Billing Longitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>