force-app/main/default/objects/ArchivedAccount__x/fields/Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province__c</fullName>
    <externalDeveloperName>billingstate</externalDeveloperName>
    <label>Billing State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>