force-app/main/default/objects/ArchivedAccount__x/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <externalDeveloperName>personcontactid</externalDeveloperName>
    <label>Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>