force-app/main/default/objects/ArchivedAccount__x/fields/Customer_Portal_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>iscustomerportal</externalDeveloperName>
    <label>Customer Portal Account</label>
    <type>Checkbox</type>
</CustomField>