force-app/main/default/objects/ArchivedAccount__x/fields/D_B_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>D_B_Company_ID__c</fullName>
    <externalDeveloperName>dandbcompanyid</externalDeveloperName>
    <label>D&amp;B Company ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>