force-app/main/default/objects/ArchivedAccount__x/fields/Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>persondonotcall</externalDeveloperName>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>