force-app/main/default/objects/ArchivedAccount__x/fields/Einstein_Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Account_Tier__c</fullName>
    <externalDeveloperName>tier</externalDeveloperName>
    <label>Einstein Account Tier</label>
    <length>2</length>
    <type>Text</type>
</CustomField>