force-app/main/default/objects/ArchivedAccount__x/fields/Email_Bounced_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounced_Date__c</fullName>
    <externalDeveloperName>personemailbounceddate</externalDeveloperName>
    <label>Email Bounced Date</label>
    <type>DateTime</type>
</CustomField>