force-app/main/default/objects/ArchivedAccount__x/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <externalDeveloperName>numberofemployees</externalDeveloperName>
    <label>Employees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>