force-app/main/default/objects/ArchivedAccount__x/fields/Exclude_from_territory_assignment_rul__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_territory_assignment_rul__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>isexcludedfromrealign</externalDeveloperName>
    <label>Exclude from territory assignment rules</label>
    <type>Checkbox</type>
</CustomField>