force-app/main/default/objects/ArchivedAccount__x/fields/ExtAccountId__c.field-meta.xml
<CustomField>
    <fullName>ExtAccountId__c</fullName>
    <externalDeveloperName>c_00_n2w00000_qq_c_l_s</externalDeveloperName>
    <label>ExtAccountId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>