force-app/main/default/objects/ArchivedAccount__x/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <externalDeveloperName>c_00_n2w00000_qx_y_p_o</externalDeveloperName>
    <label>External_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>