force-app/main/default/objects/ArchivedAccount__x/fields/Gender_Identity__c.field-meta.xml
<CustomField>
    <fullName>Gender_Identity__c</fullName>
    <externalDeveloperName>persongenderidentity</externalDeveloperName>
    <label>Gender Identity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>