force-app/main/default/objects/ArchivedAccount__x/fields/Individual_ID__c.field-meta.xml
<CustomField>
    <fullName>Individual_ID__c</fullName>
    <externalDeveloperName>personindividualid</externalDeveloperName>
    <label>Individual ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>