force-app/main/default/objects/ArchivedAccount__x/fields/Jigsaw_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Jigsaw_Company_ID__c</fullName>
    <externalDeveloperName>jigsawcompanyid</externalDeveloperName>
    <label>Jigsaw Company ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>