force-app/main/default/objects/ArchivedAccount__x/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <externalDeveloperName>lastmodifieddate</externalDeveloperName>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>