force-app/main/default/objects/ArchivedAccount__x/fields/Last_Stay_in_Touch_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Stay_in_Touch_Request_Date__c</fullName>
    <externalDeveloperName>personlastcurequestdate</externalDeveloperName>
    <label>Last Stay-in-Touch Request Date</label>
    <type>DateTime</type>
</CustomField>