force-app/main/default/objects/ArchivedAccount__x/fields/Last_Stay_in_Touch_Save_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Stay_in_Touch_Save_Date__c</fullName>
    <externalDeveloperName>personlastcuupdatedate</externalDeveloperName>
    <label>Last Stay-in-Touch Save Date</label>
    <type>DateTime</type>
</CustomField>