force-app/main/default/objects/ArchivedAccount__x/fields/Loyalty_Points__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Points__c</fullName>
    <externalDeveloperName>c_00_n2w00000_qx_y_rq</externalDeveloperName>
    <label>Loyalty Points</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>