force-app/main/default/objects/ArchivedAccount__x/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <externalDeveloperName>personmailingcity</externalDeveloperName>
    <label>Mailing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>