force-app/main/default/objects/ArchivedAccount__x/fields/Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country__c</fullName>
    <externalDeveloperName>personmailingcountry</externalDeveloperName>
    <label>Mailing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>