force-app/main/default/objects/ArchivedAccount__x/fields/Mailing_Geocode_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Geocode_Accuracy__c</fullName>
    <externalDeveloperName>personmailinggeocodeaccuracy</externalDeveloperName>
    <label>Mailing Geocode Accuracy</label>
    <length>40</length>
    <type>Text</type>
</CustomField>