force-app/main/default/objects/ArchivedAccount__x/fields/Mailing_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Longitude__c</fullName>
    <externalDeveloperName>personmailinglongitude</externalDeveloperName>
    <label>Mailing Longitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>