force-app/main/default/objects/ArchivedAccount__x/fields/Mailing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip_Postal_Code__c</fullName>
    <externalDeveloperName>personmailingpostalcode</externalDeveloperName>
    <label>Mailing Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>