force-app/main/default/objects/ArchivedAccount__x/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <externalDeveloperName>naicscode</externalDeveloperName>
    <label>NAICS Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>