force-app/main/default/objects/ArchivedAccount__x/fields/NAICS_Description__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Description__c</fullName>
    <externalDeveloperName>naicsdesc</externalDeveloperName>
    <label>NAICS Description</label>
    <length>120</length>
    <type>Text</type>
</CustomField>