force-app/main/default/objects/ArchivedAccount__x/fields/Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunities__c</fullName>
    <externalDeveloperName>c_00_n2w00000_qx_y_p_w</externalDeveloperName>
    <label>Open Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>