force-app/main/default/objects/ArchivedAccount__x/fields/Open_Opportunities_Value__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunities_Value__c</fullName>
    <externalDeveloperName>c_00_n2w00000_qx_y_p_x</externalDeveloperName>
    <label>Open Opportunities Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>