force-app/main/default/objects/ArchivedAccount__x/fields/Other_City__c.field-meta.xml
<CustomField>
    <fullName>Other_City__c</fullName>
    <externalDeveloperName>personothercity</externalDeveloperName>
    <label>Other City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>