force-app/main/default/objects/ArchivedAccount__x/fields/Other_Country__c.field-meta.xml
<CustomField>
    <fullName>Other_Country__c</fullName>
    <externalDeveloperName>personothercountry</externalDeveloperName>
    <label>Other Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>