force-app/main/default/objects/ArchivedAccount__x/fields/Other_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Other_Latitude__c</fullName>
    <externalDeveloperName>personotherlatitude</externalDeveloperName>
    <label>Other Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>