force-app/main/default/objects/ArchivedAccount__x/fields/Other_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Other_State_Province__c</fullName>
    <externalDeveloperName>personotherstate</externalDeveloperName>
    <label>Other State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>