force-app/main/default/objects/ArchivedAccount__x/fields/Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_ID__c</fullName>
    <externalDeveloperName>ownerid</externalDeveloperName>
    <label>Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>