force-app/main/default/objects/ArchivedAccount__x/fields/Parent_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_ID__c</fullName>
    <externalDeveloperName>parentid</externalDeveloperName>
    <label>Parent Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>