force-app/main/default/objects/ArchivedAccount__x/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>ispartner</externalDeveloperName>
    <label>Partner Account</label>
    <type>Checkbox</type>
</CustomField>