force-app/main/default/objects/ArchivedAccount__x/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <externalDeveloperName>c_00_n2w00000al_mdy</externalDeveloperName>
    <label>Passport Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>