force-app/main/default/objects/ArchivedAccount__x/fields/Privacy_Hold__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>hasprivacyhold</externalDeveloperName>
    <label>Privacy Hold</label>
    <type>Checkbox</type>
</CustomField>