force-app/main/default/objects/ArchivedAccount__x/fields/Rating_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Rating_Indicator__c</fullName>
    <externalDeveloperName>c_00_n2w00000_qx_y_pn</externalDeveloperName>
    <label>Rating Indicator</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>