force-app/main/default/objects/ArchivedAccount__x/fields/Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID__c</fullName>
    <externalDeveloperName>recordtypeid</externalDeveloperName>
    <label>Record Type ID</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>