force-app/main/default/objects/ArchivedAccount__x/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <externalDeveloperName>salutation</externalDeveloperName>
    <label>Salutation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>