force-app/main/default/objects/ArchivedAccount__x/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <externalDeveloperName>shippingcity</externalDeveloperName>
    <label>Shipping City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>