force-app/main/default/objects/ArchivedAccount__x/fields/Shipping_Geocode_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Geocode_Accuracy__c</fullName>
    <externalDeveloperName>shippinggeocodeaccuracy</externalDeveloperName>
    <label>Shipping Geocode Accuracy</label>
    <length>40</length>
    <type>Text</type>
</CustomField>