force-app/main/default/objects/ArchivedAccount__x/fields/Shipping_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Latitude__c</fullName>
    <externalDeveloperName>shippinglatitude</externalDeveloperName>
    <label>Shipping Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>