force-app/main/default/objects/ArchivedAccount__x/fields/Shipping_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Longitude__c</fullName>
    <externalDeveloperName>shippinglongitude</externalDeveloperName>
    <label>Shipping Longitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>