force-app/main/default/objects/ArchivedAccount__x/fields/Shipping_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Province__c</fullName>
    <externalDeveloperName>shippingstate</externalDeveloperName>
    <label>Shipping State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>