force-app/main/default/objects/ArchivedAccount__x/fields/Shipping_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip_Postal_Code__c</fullName>
    <externalDeveloperName>shippingpostalcode</externalDeveloperName>
    <label>Shipping Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>