force-app/main/default/objects/ArchivedAccount__x/fields/Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Ticker_Symbol__c</fullName>
    <externalDeveloperName>tickersymbol</externalDeveloperName>
    <label>Ticker Symbol</label>
    <length>20</length>
    <type>Text</type>
</CustomField>