force-app/main/default/objects/ArchivedAccount__x/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <externalDeveloperName>c_00_n2w00000bwdt_o</externalDeveloperName>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>