force-app/main/default/objects/ArchivedAccount__x/fields/Year_Started__c.field-meta.xml
<CustomField>
    <fullName>Year_Started__c</fullName>
    <externalDeveloperName>yearstarted</externalDeveloperName>
    <label>Year Started</label>
    <length>4</length>
    <type>Text</type>
</CustomField>